--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,19 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.weekday-view-hours {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.hour-slot {
+  height: 5rem;
+  width: 100%;
+  border-left: 1px solid;
+}
+
+.hour-slot-border {
+  border-bottom: 1px solid;
+}
